--- a/client/src/components/pages/watch_video/watch_video_page_components/video_block/VideoBlock.css
+++ b/client/src/components/pages/watch_video/watch_video_page_components/video_block/VideoBlock.css
@@ -45,7 +45,8 @@
 .description-div {
   text-align: left;
   width: 100%;
-  height: 200px;
+  min-height: 200px;
+  height: fit-content;
   overflow: auto;
   padding: 20px;
   border-radius: 10px;
